Add ability to self-assign post
